# HU-THGA

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  setup-visual-studio.bat
src/: CMakeLists.txt  Main.cpp
src/Construction/: Barrack.hpp  Building.hpp  Butchery.hpp  Castle.hpp  Construction.hpp  Goldmine.hpp  GridSquare.hpp  Stonemine.hpp  Tower.hpp  Woodshop.hpp
src/Core/: Game.cpp  Game.hpp
src/Entity/: BaseEntity.cpp  BaseEntity.hpp  GameEntity.cpp  GameEntity.hpp  GuiEntity.cpp  GuiEntity.hpp  SkyEntity.cpp  SkyEntity.hpp  TerrainEntity.cpp  TerrainEntity.hpp
src/Listener/: BuildingListener.hpp  UnitListener.hpp
src/Manager/: CameraManager.cpp  CameraManager.hpp  ConstructionManager.cpp  ConstructionManager.hpp  GameplayManager.cpp  GameplayManager.hpp  GuiManager.cpp  GuiManager.hpp  SoundManager.cpp  SoundManager.hpp  TerrainManager.cpp  TerrainManager.hpp  UnitManager.cpp  UnitManager.hpp  WindowManager.cpp  WindowManager.hpp
src/Misc/: Globals.hpp  Logger.hpp  ResourcesCollection.hpp  StringStream.cpp  StringStream.hpp
src/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLShader.cpp  OpenGLShader.hpp
src/Opponent/: LaneInsight.cpp  LaneInsight.hpp  OpponentManager.cpp  OpponentManager.hpp
src/Renderer/: BaseRenderer.hpp  GameEntityRenderer.cpp  GameEntityRenderer.hpp  GuiEntityRenderer.cpp  GuiEntityRenderer.hpp  SkyEntityRenderer.cpp  SkyEntityRenderer.hpp  TerrainEntityRenderer.cpp  TerrainEntityRenderer.hpp
src/ResourceLoading/: EntityFactory.cpp  EntityFactory.hpp  ObjLoader.cpp  ObjLoader.hpp  SoundLoader.cpp  (+4 more)
(+44 files in other folders)
